--- a/public/css/app.css
+++ b/public/css/app.css
@@ -885,10 +885,6 @@ video {
   height: 8.333333%;
 }
 
-.h-4\/12 {
-  height: 33.333333%;
-}
-
 .max-h-\[300vh\] {
   max-height: 300vh;
 }
@@ -981,6 +977,26 @@ video {
   width: 66.666667%;
 }
 
+.w-10\/12 {
+  width: 83.333333%;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
+}
+
+.w-\[85vw\] {
+  width: 85vw;
+}
+
+.w-\[15vw\] {
+  width: 15vw;
+}
+
+.w-\[10vw\] {
+  width: 10vw;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1069,6 +1085,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .text-ellipsis {
@@ -1200,18 +1220,14 @@ video {
   background-color: rgb(155 28 28 / var(--tw-bg-opacity));
 }
 
-.bg-red-doc {
-  background-color: rgba(146, 25, 20, 1);
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 82 82 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(244 245 247 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 82 82 / var(--tw-bg-opacity));
 }
 
 .bg-gray-300 {
@@ -1234,14 +1250,13 @@ video {
   background-color: rgb(26 32 46 / var(--tw-bg-opacity));
 }
 
+.bg-red-doc {
+  background-color: rgba(146, 25, 20, 1);
+}
+
 .bg-blue-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(35 56 118 / var(--tw-bg-opacity));
-}
-
-.bg-red-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(119 29 29 / var(--tw-bg-opacity));
 }
 
 .bg-black-doc {
@@ -1250,6 +1265,26 @@ video {
 
 .bg-yellow-doc {
   background-color: rgba(234, 213, 131, 1);
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(118 169 250 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.bg-teal-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 116 129 / var(--tw-bg-opacity));
 }
 
 .bg-clip-padding {
@@ -2014,6 +2049,16 @@ video {
 
   .xl\:h-52 {
     height: 13rem;
+  }
+
+  .xl\:h-fit {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .xl\:h-\[400vw\] {
+    height: 400vw;
   }
 
   .xl\:w-\[400vw\] {
