--- a/public/css/app.css
+++ b/public/css/app.css
@@ -677,8 +677,12 @@ video {
   margin: 0;
 }
 
-.m-2 {
-  margin: 0.5rem;
+.m-5 {
+  margin: 1.25rem;
+}
+
+.m-10 {
+  margin: 2.5rem;
 }
 
 .my-6 {
@@ -747,8 +751,12 @@ video {
   margin-right: 0.75rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.ml-1\/2 {
+  margin-left: 50%;
+}
+
+.ml-1\/12 {
+  margin-left: 8.333333%;
 }
 
 .box-border {
@@ -833,44 +841,12 @@ video {
   height: auto;
 }
 
-.h-2\/6 {
-  height: 33.333333%;
-}
-
-.h-1\/3 {
-  height: 33.333333%;
-}
-
-.h-2\/3 {
-  height: 66.666667%;
-}
-
-.h-4\/6 {
-  height: 66.666667%;
-}
-
-.h-1\/6 {
-  height: 16.666667%;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
-}
-
 .h-\[250vh\] {
   height: 250vh;
 }
 
-.h-\[10\%\] {
-  height: 10%;
-}
-
-.h-4\/5 {
-  height: 80%;
-}
-
-.h-1\/2 {
-  height: 50%;
+.h-1\/3 {
+  height: 33.333333%;
 }
 
 .h-10\/12 {
@@ -881,8 +857,12 @@ video {
   height: 1rem;
 }
 
-.h-1\/12 {
-  height: 8.333333%;
+.h-4\/5 {
+  height: 80%;
+}
+
+.h-4\/12 {
+  height: 33.333333%;
 }
 
 .max-h-\[300vh\] {
@@ -949,12 +929,24 @@ video {
   width: 2rem;
 }
 
-.w-2\/5 {
-  width: 40%;
+.w-\[85vw\] {
+  width: 85vw;
 }
 
-.w-3\/5 {
-  width: 60%;
+.w-\[15vw\] {
+  width: 15vw;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-8\/12 {
+  width: 66.666667%;
 }
 
 .w-3\/4 {
@@ -973,28 +965,26 @@ video {
   width: 58.333333%;
 }
 
-.w-4\/6 {
-  width: 66.666667%;
+.w-2\/12 {
+  width: 16.666667%;
 }
 
-.w-10\/12 {
-  width: 83.333333%;
+.w-\[700px\] {
+  width: 700px;
 }
 
-.w-\[90vw\] {
-  width: 90vw;
+.w-\[50vw\] {
+  width: 50vw;
 }
 
-.w-\[85vw\] {
-  width: 85vw;
+.-translate-x-\[100px\] {
+  --tw-translate-x: -100px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.w-\[15vw\] {
-  width: 15vw;
-}
-
-.w-\[10vw\] {
-  width: 10vw;
+.translate-x-\[100px\] {
+  --tw-translate-x: 100px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -1009,10 +999,6 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-}
-
-.list-decimal {
-  list-style-type: decimal;
 }
 
 .flex-row {
@@ -1259,12 +1245,12 @@ video {
   background-color: rgb(35 56 118 / var(--tw-bg-opacity));
 }
 
-.bg-black-doc {
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
 .bg-yellow-doc {
   background-color: rgba(234, 213, 131, 1);
+}
+
+.bg-black-doc {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .bg-gray-500 {
@@ -1272,19 +1258,19 @@ video {
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(195 221 253 / var(--tw-bg-opacity));
+}
+
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(118 169 250 / var(--tw-bg-opacity));
 }
 
-.bg-gray-600 {
+.bg-green-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-teal-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(4 116 129 / var(--tw-bg-opacity));
+  background-color: rgb(49 196 141 / var(--tw-bg-opacity));
 }
 
 .bg-clip-padding {
@@ -1420,6 +1406,18 @@ video {
   padding-right: 0.75rem;
 }
 
+.pl-\[100px\] {
+  padding-left: 100px;
+}
+
+.pl-3\/12 {
+  padding-left: 25%;
+}
+
+.pl-1\/12 {
+  padding-left: 8.333333%;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1474,16 +1472,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-semibold {
@@ -1663,6 +1651,10 @@ video {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.writing-mode-vertical-lr {
+  writing-mode: vertical-lr;
 }
 
 .hover\:w-40:hover {
@@ -2039,8 +2031,8 @@ video {
     margin-top: 5rem;
   }
 
-  .xl\:h-\[4000px\] {
-    height: 4000px;
+  .xl\:h-\[400vw\] {
+    height: 400vw;
   }
 
   .xl\:h-screen {
@@ -2051,26 +2043,32 @@ video {
     height: 13rem;
   }
 
-  .xl\:h-fit {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-  }
-
-  .xl\:h-\[400vw\] {
-    height: 400vw;
-  }
-
   .xl\:w-\[400vw\] {
     width: 400vw;
   }
 
-  .xl\:flex-row {
-    flex-direction: row;
+  .xl\:w-\[75vw\] {
+    width: 75vw;
   }
 
-  .xl\:flex-wrap {
-    flex-wrap: wrap;
+  .xl\:w-\[70vw\] {
+    width: 70vw;
+  }
+
+  .xl\:w-\[60vw\] {
+    width: 60vw;
+  }
+
+  .xl\:w-\[300vw\] {
+    width: 300vw;
+  }
+
+  .xl\:w-screen {
+    width: 100vw;
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
   }
 
   .xl\:p-10 {
