--- a/public/css/app.css
+++ b/public/css/app.css
@@ -685,6 +685,10 @@ video {
   margin: 2.5rem;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
@@ -743,20 +747,28 @@ video {
   margin-left: 8rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mr-7 {
+  margin-right: 1.75rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .mr-3 {
   margin-right: 0.75rem;
-}
-
-.ml-1\/12 {
-  margin-left: 8.333333%;
-}
-
-.box-border {
-  box-sizing: border-box;
 }
 
 .block {
@@ -833,32 +845,48 @@ video {
   height: 3rem;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-\[250vh\] {
-  height: 250vh;
-}
-
-.h-1\/3 {
-  height: 33.333333%;
-}
-
 .h-10\/12 {
   height: 83.333333%;
 }
 
-.h-4 {
-  height: 1rem;
+.h-auto {
+  height: auto;
 }
 
-.h-4\/5 {
-  height: 80%;
+.h-2\/12 {
+  height: 16.666667%;
 }
 
-.h-4\/12 {
-  height: 33.333333%;
+.h-1\/12 {
+  height: 8.333333%;
+}
+
+.h-2\/3 {
+  height: 66.666667%;
+}
+
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-6\/12 {
+  height: 50%;
+}
+
+.h-\[6vh\] {
+  height: 6vh;
+}
+
+.h-\[15vh\] {
+  height: 15vh;
+}
+
+.h-\[12vh\] {
+  height: 12vh;
+}
+
+.h-8\/12 {
+  height: 66.666667%;
 }
 
 .max-h-\[300vh\] {
@@ -921,60 +949,77 @@ video {
   width: 83.333333%;
 }
 
-.w-8 {
-  width: 2rem;
+.w-20 {
+  width: 5rem;
 }
 
-.w-\[85vw\] {
-  width: 85vw;
+.w-section-1 {
+  width: 1919px;
 }
 
-.w-\[15vw\] {
-  width: 15vw;
-}
-
-.w-1\/12 {
-  width: 8.333333%;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-8\/12 {
-  width: 66.666667%;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-15 {
-  width: 3.75rem;
+.w-5\/12 {
+  width: 41.666667%;
 }
 
 .w-7\/12 {
   width: 58.333333%;
 }
 
+.w-9\/12 {
+  width: 75%;
+}
+
+.w-8\/12 {
+  width: 66.666667%;
+}
+
+.w-section-2 {
+  width: 1981px;
+}
+
 .w-2\/12 {
   width: 16.666667%;
 }
 
-.w-\[700px\] {
-  width: 700px;
+.w-10\/12 {
+  width: 83.333333%;
 }
 
-.w-\[50vw\] {
-  width: 50vw;
+.w-section-3 {
+  width: 1859px;
 }
 
-.-translate-x-\[100px\] {
-  --tw-translate-x: -100px;
+.w-24 {
+  width: 6rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.-translate-x-1\/12 {
+  --tw-translate-x: -8.333333%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -996,20 +1041,12 @@ video {
   flex-direction: row;
 }
 
-.flex-row-reverse {
-  flex-direction: row-reverse;
-}
-
 .flex-col {
   flex-direction: column;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -1060,6 +1097,10 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1099,6 +1140,28 @@ video {
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
+}
+
+.rounded-l-2xl {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-b-2xl {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-tr-2xl {
+  border-top-right-radius: 1rem;
+}
+
+.rounded-tr-3xl {
+  border-top-right-radius: 1.5rem;
+}
+
+.rounded-tr-full {
+  border-top-right-radius: 9999px;
 }
 
 .border {
@@ -1222,13 +1285,8 @@ video {
   background-color: rgb(63 131 248 / var(--tw-bg-opacity));
 }
 
-.bg-cool-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(26 32 46 / var(--tw-bg-opacity));
-}
-
 .bg-red-doc {
-  background-color: rgba(146, 25, 20, 1);
+  background-color: rgba(206, 14, 45, 1);
 }
 
 .bg-blue-900 {
@@ -1236,17 +1294,37 @@ video {
   background-color: rgb(35 56 118 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-doc {
-  background-color: rgba(234, 213, 131, 1);
+.bg-purple-doc {
+  background-color: rgba(128, 57, 142, 0.6);
 }
 
-.bg-black-doc {
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.bg-blue-400 {
+.bg-gray-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(118 169 250 / var(--tw-bg-opacity));
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 160 8 / var(--tw-bg-opacity));
+}
+
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 108 78 / var(--tw-bg-opacity));
+}
+
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(188 240 218 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-cover {
+  background-size: cover;
 }
 
 .bg-clip-padding {
@@ -1268,14 +1346,6 @@ video {
 
 .p-3 {
   padding: 0.75rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .px-3 {
@@ -1378,12 +1448,16 @@ video {
   padding-bottom: 2rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
-.pl-1\/12 {
-  padding-left: 8.333333%;
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
+.pr-15 {
+  padding-right: 3.75rem;
 }
 
 .text-center {
@@ -1395,11 +1469,15 @@ video {
 }
 
 .font-serif {
-  font-family: "Source Serif Pro";
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.font-poppins {
+  font-family: "poppins";
 }
 
 .text-sm {
@@ -1440,6 +1518,16 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-semibold {
@@ -1626,12 +1714,33 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.writing-mode-vertical-lr {
-  writing-mode: vertical-lr;
-}
+.scrollbar::-webkit-scrollbar {
+      width: 20px;
+      height: 20px;
+      display: none;
+    }
+
+.scrollbar::-webkit-scrollbar-track {
+      border-radius: 100vh;
+      background: #f7f4ed;
+    }
+
+.scrollbar::-webkit-scrollbar-thumb {
+      background: #e0cbcb;
+      border-radius: 100vh;
+      border: 3px solid #f6f7ed;
+    }
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+      background: #c0a0b9;
+    }
 
 .hover\:w-40:hover {
   width: 10rem;
+}
+
+.hover\:w-56:hover {
+  width: 14rem;
 }
 
 .hover\:border-red-500:hover {
@@ -2000,10 +2109,6 @@ video {
     position: fixed;
   }
 
-  .xl\:mt-20 {
-    margin-top: 5rem;
-  }
-
   .xl\:h-\[400vw\] {
     height: 400vw;
   }
@@ -2012,32 +2117,16 @@ video {
     height: 100vh;
   }
 
-  .xl\:h-52 {
-    height: 13rem;
-  }
-
-  .xl\:w-\[300vw\] {
-    width: 300vw;
-  }
-
-  .xl\:w-screen {
-    width: 100vw;
-  }
-
-  .xl\:w-\[75vw\] {
-    width: 75vw;
-  }
-
-  .xl\:w-\[60vw\] {
-    width: 60vw;
+  .xl\:w-full-page {
+    width: 5759px;
   }
 
   .xl\:flex-row {
     flex-direction: row;
   }
 
-  .xl\:p-10 {
-    padding: 2.5rem;
+  .xl\:bg-\[url\(\'\/images\/landing\/fondo\.png\'\)\] {
+    background-image: url('/images/landing/fondo.png');
   }
 }
 
